--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,8 +35,7 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps">
-        </activity>
+            android:label="@string/title_activity_maps" />
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main"
@@ -49,7 +48,8 @@
         </activity>
         <activity
             android:name=".ChooseObjectiveType"
-            android:label="@string/title_activity_choose_objective_type"></activity>
+            android:label="@string/title_activity_choose_objective_types"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
